<resources>
    <string name="instructions">Press A Button For A Delicious Joke!</string>
    <string name="toast_button_text">Tell Joke (From A Java Library)</string>
    <string name="android_library_button_text">Tell Joke (From An Android Library)</string>
    <string name="android_endpoint_button_text">Tell Joke (From A Google Cloud Endpoint)</string>
    <string name="action_settings">Settings</string>
    <string name="smiley_content_description">Smiley Image</string>
</resources>
