<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".JokeActivityFragment"
    android:gravity="center">

    <TextView android:text="@string/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instructions_text_view"
        android:gravity="center"
        android:textStyle="bold"
        android:textIsSelectable="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:paddingBottom="@dimen/spacing_large" />

    <Button
        android:id="@+id/toast_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructions_text_view"
        android:text="@string/toast_button_text"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/android_library_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toast_button"
        android:text="@string/android_library_button_text"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/android_endpoint_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/android_library_button"
        android:text="@string/android_endpoint_button_text"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/laugh"
        android:layout_below="@+id/android_endpoint_button"
        android:src="@drawable/smiley"
        android:contentDescription="@string/smiley_content_description"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/spacing_small" />

    <ProgressBar
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:indeterminate="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_below="@+id/laugh"
        android:layout_centerHorizontal="true"
        android:minWidth="200dp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>



</RelativeLayout>
